Remove not needed JVM arg for quasar in tests