@@ -48,7 +48,6 @@ tasks.withType<Test>().configureEach {
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
         "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
     )
     systemProperty("java.io.tmpdir", buildDir.absolutePath)
 }
